# Windows-Toast-Notification-Listener

./: .gitignore  BREAKING.md  Cargo.toml  pyproject.toml  readme.md  readme_cn.md
doc/en/About_Event_Notification/: Explanation.md
doc/en/PythonAPI/: Explanation.md
doc/zh-hans/About_Event_Notification/: Explanation.md
doc/zh-hans/PythonAPI/: Explanation.md
example/ToastBox/: main.py
src/: lib.rs
src/modules/: listener.rs
src/modules/implements/: diff.rs  diff_tool.rs  listener.rs  mod.rs  mutable_toast.rs  toast.rs
src/modules/implements/events/features/: callback_token.rs  polling_eventify.rs
src/modules/types/: diff.rs  diff_tool.rs  listener.rs  mod.rs  notification.rs  serialize_format.rs
src/modules/types/events/features/: callback_token.rs  events_type.rs  polling_eventify.rs  polling_status.rs
src/modules/utils/: notification_tools.rs
win_notice_lite/: __init__.py
