[package]
name = "win-notice-lite"
authors = ["星灿长风v(StarWindv)"]
version = "0.0.3"
edition = "2024"
license = "GPL-3"
homepage = "https://github.com/starwindv/windows-notice-lite.git"

[dependencies]
pyo3 = { version = "0.28.2", features = ["experimental-async"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
toml = "1.0.6"
windows = { version = "0.62.2", features = [
    "UI_Notifications",
    "UI_Notifications_Management",
    "ApplicationModel"
] }
windows-collections = "0.3.2"
windows-future = "0.3.2"

[lib]
name = "win_notice_lite"
path = "src/lib.rs"
crate-type = ["cdylib"]
